--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -16,6 +16,7 @@
 <div class="container main">
     <div class="row">
         <div class="col-md-6 top-landing-left">
+            <h2 style="display: block">Welcome to your dashboard</h2>
             <div class="calendar">
                 <div class="calendar-header">
                     <div class="month-year">
