Edit securit login, URL on dashboard page, edit to create and read calendar functionality

--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -72,7 +72,7 @@
                            value="Create" name="submitButton"/>
                 </div>
                 <div class="signin">
-                    <span>Already have an account? <a href="/calendar/calendar.html">Log in here</a></span>
+                    <span>Already have an account?<a th:href="@{/login}">Login</a></span>
                 </div>
             </form>
         </div>
