--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -202,7 +202,7 @@ html, body{
     background-color: rgba(37, 95, 156, 0.937);
 }
 
-.create-cal, .create-event {
+.create-cal, .create-event, .calendar-list {
     margin: 2%;
     font-family: Poppins;
     color: #fff;
@@ -218,4 +218,13 @@ html, body{
 
 .popup-background{
     backdrop-filter: blur(15px);
+}
+
+.rightside{
+    margin-left: 20%;
+}
+.delete-icon {
+    cursor: pointer;
+    color: red;
+    margin-left: 10px;
 }
