--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
+<!--<html lang="en">-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,21 +45,24 @@
                     <tbody id="calendar-body"></tbody>
                 </table>
             </div>
+            <div class="rightside">
+                <div id="showAllCalendars">
+                    <table id="calendarTable"></table>
+                </div>
+            </div>
         </div>
         <div class="col-md-6 top-landing-right">
             <div id="hours-container"></div>
-            <!--            <form th:action="@{/calendars}" method="post">-->
-            <!--                <input type="submit" class="create-calendar" value="new calendar">-->
-            <!--            </form>-->
-            <!--            <a href="/event_form/event_form.html"> <input type="submit" class="submit" value="new calendar"> </a>-->
-            <button class="create-cal" onclick="showPopup()">+ calendar</button>
+            <button class="create-cal" onclick="showPopup('popup')">+ calendar</button>
             <button class="create-event">+ event</button>
+            <button class="calendar-list" onclick="showAllCalendars()">show all calendars</button>
+
         </div>
     </div>
     <!-- Pop-up form -->
     <div class="popup-background">
         <div id="popup">
-            <form th:action="@{/calendars}" method="post" onsubmit="return submitForm()">
+            <form th:action="@{/addcalendar}" method="post" onsubmit="return submitForm()">
                 <input type="text" id="calendarName" name="calendarName" placeholder="calendar name" required>
                 <input type="submit" value="+ add">
             </form>
