--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -36,7 +36,7 @@
             </div>
         </div>
         <div class="col-md-6 right">
-            <form class="form-signin" method="post" action="#" th:action="@{/login}">
+            <form class="form-signin" method="post" action="#" th:action="@{/dashboard}">
                 <h2 class="form-signin-heading">Please sign in</h2>
                 <div class="input-field">
                     <label for="username" >Username</label>
