--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -47,7 +47,9 @@
             </div>
             <div class="rightside">
                 <div id="showAllCalendars">
-                    <table id="calendarTable"></table>
+                    <form action="`/dashboard/${calendarId}" method="post">
+                        <table id="calendarTable"></table>
+                    </form>
                 </div>
             </div>
         </div>
