--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -13,6 +13,7 @@
           rel="stylesheet">
     <!--    <link rel="stylesheet" th:href="@{/external/css/sign-up.css}" />-->
     <script th:src="@{/js/calendar.js}" defer></script>
+    <script th:src="@{/js/crud_operations.js}" defer></script>
 </head>
 <body>
 <div class="container main">
@@ -47,7 +48,8 @@
             </div>
             <div class="rightside">
                 <div id="showAllCalendars">
-                    <form action="`/dashboard/${calendarId}" method="post">
+<!--                    <form action="`/dashboard/${calendarId}" method="post">-->
+                    <form action="`/calendarlist" method="post">
                         <table id="calendarTable"></table>
                     </form>
                 </div>
@@ -58,13 +60,13 @@
             <button class="create-cal" onclick="showPopup('popup')">+ calendar</button>
             <button class="create-event" ><a th:href="@{/event-form}">+event </a></button>
             <button class="calendar-list" onclick="showAllCalendars()">show all calendars</button>
-
+            <button class="display-all-events"><a th:href="@{/events}">show All Events</a></button>
         </div>
     </div>
     <!-- Pop-up form -->
     <div class="popup-background">
         <div id="popup">
-            <form id="addCalendarForm" th:action="@{/dashboard}" method="post" onsubmit="return submitForm()">
+            <form id="addCalendarForm" th:action="@{/saveCalendar}" method="post" onsubmit="return submitForm()">
                 <input type="text" id="calendarName" name="calendarName" placeholder="calendar name" required>
                 <input type="submit" value="+ add">
             </form>
