--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,44 +1,76 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html xmlns:th="http://www.thymeleaf.org">
+<!--<html lang="en">-->
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
-    <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-          crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calendar</title>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
+    <link rel="stylesheet" th:href="@{/css/dashboard.css}"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,300&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+          rel="stylesheet">
+    <!--    <link rel="stylesheet" th:href="@{/external/css/sign-up.css}" />-->
+    <script th:src="@{/js/calendar.js}" defer></script>
+    <script th:src="@{/js/crud_operations.js}" defer></script>
 </head>
 <body>
-<div>
-    <h2>Success!!!</h2>
-    <!--YOU CAN SPECIFY VISIBLE CONTENT BASED ON USER ROLE-->
-    <div sec:authorize="isAuthenticated()">
-        This content is only shown to authenticated users.
+<div class="container main">
+    <div class="row" id="blur">
+        <h2 class="welcome-dash">Welcome to your dashboard</h2>
+        <div class="col-md-6 top-landing-left">
+
+            <div class="calendar">
+                <div class="calendar-header">
+                    <div class="month-year">
+                        <div id="this-month" style="font-weight: bolder; font-size: xx-large;"></div>
+                        <div id="this-year" style="font-weight: bolder; font-size: xx-large;"></div>
+                    </div>
+                    <div class="month-picker">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                             class="bi bi-arrow-left-circle-fill" viewBox="0 0 16 16">
+                            <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0m3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5z"/>
+                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                             class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
+                            <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0M4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5z"/>
+                        </svg>
+                    </div>
+                </div>
+
+                <table class="table">
+                    <thead>
+                    <tr class="days-of-week" id="days-of-week"></tr>
+                    </thead>
+                    <tbody id="calendar-body"></tbody>
+                </table>
+            </div>
+            <div class="rightside">
+                <div id="showAllCalendars">
+                    <form action="`/dashboard/${calendarId}" method="post">
+                        <table id="calendarTable"></table>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 top-landing-right">
+            <div id="hours-container"></div>
+            <button class="create-cal" onclick="showPopup('popup')">+ calendar</button>
+            <button class="create-event" ><a th:href="@{/event-form}">+event </a></button>
+            <button class="calendar-list" onclick="showAllCalendars()">show all calendars</button>
+
+        </div>
     </div>
-    <div sec:authorize="hasRole('ROLE_ADMIN')">
-        This content is only shown to administrators.
-    </div>
-    <div sec:authorize="hasRole('ROLE_USER')">
-        This content is only shown to users.
+    <!-- Pop-up form -->
+    <div class="popup-background">
+        <div id="popup">
+            <form id="addCalendarForm" th:action="@{/saveCalendar}" method="post" onsubmit="return submitForm()">
+                <input type="text" id="calendarName" name="calendarName" placeholder="calendar name" required>
+                <input type="submit" value="+ add">
+            </form>
+        </div>
     </div>
 </div>
-<table style="width:50%">
-    <tr>
-        <td>
-            <strong>Logged user: <span sec:authentication="name"></span></strong>
-            <br>
-            <strong>Roles: <span
-                    sec:authentication="principal.authorities"></span></strong>
-        </td>
-        <td>
-            <br><br>
-            <form action=# th:action="@{/logout}" method="post">
-                <input id="submitButton" type="submit" value="Logout" />
-            </form>
-            <br>
-        </td>
-    </tr>
-</table>
 </body>
 </html>
