--- a/src/main/resources/templates/event-form.html
+++ b/src/main/resources/templates/event-form.html
@@ -4,38 +4,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/flyer_logo.png" type="image/x-icon">
     <title>flyer event form</title>
-    <!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
-    <!--    <link rel="stylesheet" href="./event_form.css">-->
-    <!--    <link rel="stylesheet" href="./calendar.css">-->
-    <link rel="stylesheet" th:href="@{/css/event.css}"/>
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,300&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
           rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css"
           rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
 
-    <script>
-        $(function () {
-            $('#datetimepicker3').datetimepicker({
-                format: 'LT'
-            });
-            console.log("DateTimePicker initialized");
-        });
-    </script>
+
+    <link href=”https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css” rel=”stylesheet”>
+    <script src=”https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js”></script>
+    <script src=”https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js”></script>
+
+
+    <script type=”text/javascript” src=”https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js”></script>
+    <link href=”https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css” rel=”stylesheet”>
+    <script src=”https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js”> </script>
+    <link rel="stylesheet" th:href="@{/css/event.css}"/>
     <script th:src="@{/js/event_form.js}" defer></script>
+
+
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet"
+          type="text/css"/>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
+
+    <title>Bootstrap Datepicker</title>
+
+    <style>
+        label {
+            margin-left: 20px;
+        }
+
+        #datepicker {
+            width: 180px;
+        }
+
+        #datepicker > span:hover {
+            cursor: pointer;
+        }
+        body{
+            background-color: #111E2B;
+        }
+
+    </style>
+
 </head>
 <body>
 <div class="container main">
     <div class="row">
-        <div class="col-md-6">
-        </div>
-
-        <div class="col-md-6">
-            <h1>new event</h1>
+        <div class="col-md-8">
+            <h1 style="color: white;">new event</h1>
             <form th:action="@{/event-form}" method="post" class="input-box" id="new-event-form">
 
                 <div class="input-field">
@@ -45,22 +71,31 @@
                 <div class="input-field">
                     <input type="text" id="location" name="location" placeholder="location" required>
                 </div>
-
+                <label style="color: white"> date </label>
                 <div class="input-field">
-                    <input type="text" id="day" name="day" placeholder="day" required>
-                </div>
-
-                <div class="input-field">
-                    <div class='input-group date' id='datetimepicker3'>
-                        <input type='text' class="form-control" id="startTime" name="start_time"
-                               placeholder="start time" required/>
-                        <span class="input-group-addon orange-icon"><i class="fas fa-clock"></i></span>
+<!--                    <input type="text" id="day" name="day" placeholder="day" required>-->
+                    <div class="input-field">
+                        <div id="datepicker"
+                             class="input-group date"
+                             data-date-format="mm-dd-yyyy">
+                            <input class="form-control"
+                                   type="text" readonly
+                                   name="day"/>
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                        </div>
                     </div>
                 </div>
 
+                <label style="color: white"> start time </label>
                 <div class="input-field">
-                    <input type="text" id="endTime" name="end_time" placeholder="end time" required>
+                    <input type="time"  id="datetime" name="start_time" class="form-control" placeholder="start time"/>
                 </div>
+
+                <label style="color: white"> end time </label>
+                <div class="input-field">
+                        <input type="time" class="form-control" name="end_time" placeholder="end time" />
+                </div>
+
                 <div class="input-field">
                     <input type="text" id="notes" name="notes" placeholder="notes" required>
                 </div>
@@ -76,12 +111,47 @@
                     <input type="submit" class="submit" value="create event">
                 </div>
             </form>
-            <button ><a th:href="@{/dashboard}"> < back to dash </a></button>
-        </div>
+<!--            <button class="input-field submit-event" ><a th:href="@{/dashboard}"></a> < back to dash</button>-->
+
+            <button ><a th:href="@{/dashboard}"> < back to dash </a></button></div>
     </div>
 
 </div>
+<script src="https://code.jquery.com/jquery-3.6.1.min.js"
+        integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+        crossorigin="anonymous">
+</script>
 
+<script>
+    $(function () {
+        $("#datepicker").datepicker({
+            autoclose: true,
+            todayHighlight: true,
+            todayBtn: "linked",
+        }).datepicker('update', new Date());
+    });
+    $(document).ready(function() {
+        $('.timepicker').datetimepicker({
+            format: 'HH:mm',          // Use 24-hour format
+            stepping: 15,              // Set minute step
+            showClear: true,          // Show clear button
+            icons: {
+                time: 'fa fa-clock-o', // Use FontAwesome clock icon
+                clear: 'fa fa-trash'   // Use FontAwesome trash icon for clear button
+            }
+        });
+    });
+</script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous">
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js">
+</script>
 </body>
 </html>
 
