--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -13,71 +13,105 @@
 <!--    <script src="create-account.js" defer></script>-->
 </head>
 <body>
+<nav id="menu">
+    <ul>
+        <li><a th:href="@{/login}">login</a></li>
+        <li><a th:href="@{/sign-up}">sign Up</a></li>
+    </ul>
+</nav>
 <div class="container main">
     <div class="row">
         <div class="col-md-6 top-landing-left">
             <div class="top-landing">
                 <div class="top-landing-left">
-                    <h1 class="welcome">Welcome to  </h1>
-<!--                    <img src="flyer_logo.png" class="logo" alt="logo">-->
-                    <img th:src="@{/css/flyer_logo-removebg-preview.png}" alt="Description of the image" />
-                    <h1 class="welcome">flyer</h1>
+                    <h1 class="welcome">Welcome to </h1>
+                    <img th:src="@{/css/flyer-icon.png}" alt="Description of the image" />
+                    <h1 class="welcome-flyer">flyer</h1>
                     <h5 class="login-description">Here is your personal time management tool to <br> keep track of your time when time flies!</h5>
-                </div>
-                <div class="top-landing-right">
                 </div>
             </div>
         </div>
         <div class="col-md-6 right">
-            <form th:action="@{/signup-process}" th:object="${userDto}" id="create-account-form" class="input-box" method="post" enctype="utf8">
-                <h2 class="create-account">Create account</h2>
-                <div class="input-field">
-                    <input type="text" th:field="*{firstName}" class="input" id="firstName"  required>
-                    <span th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></span><br/>
-                    <label for="firstName">First Name</label>
-                </div>
-                <div class="input-field">
-                    <input type="text" th:field="*{lastName}" class="input" id="lastName"  required>
-                    <span th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></span><br/>
-                    <label for="lastName">Last Name</label>
-                </div>
-                <div class="input-field">
-                    <input type="text" th:field="*{userName}" class="input" id="username"  required>
-                    <span th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}"></span><br/>
-                    <label for="username"> Username</label>
-                </div>
-                <div class="input-field">
-                    <input type="text" th:field="*{email}" class="input" id="email"  required>
-                    <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span><br/>
-                    <label for="email">Email</label>
-                </div>
-                <div class="input-field">
-                    <input type="text" th:field="*{phone}" class="input" id="phone"  required>
-                    <span th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></span><br/>
-                    <label for="phone">Phone Number</label>
-                </div>
-                <div class="input-field">
-                    <input type="password" th:field="*{password}" class="input" id="pass"  required>
-                    <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span><br/>
-                    <label for="pass">Password</label>
-                </div>
-                <div class="input-field">
-                    <input type="password" th:field="*{matchingPassword}" class="input" id="matchingPassword"  required>
-                    <span th:if="${#fields.hasErrors('matchingPassword')}" th:errors="*{matchingPassword}"></span><br/>
-                    <label for="pass">Password</label>
-                </div>
-                <div class="input-field">
-<!--                    <input type="submit" class="submit btn btn-primary"  value="Create">-->
-                    <input id="submitButton" class="btn btn-primary" type="submit"
-                           value="Create" name="submitButton"/>
-                </div>
-                <div class="signin">
-                    <span>Already have an account?<a th:href="@{/login}">Login</a></span>
-                </div>
-            </form>
+            <div class="signup-container">
+                <form th:action="@{/signup-process}" th:object="${userDto}" id="create-account-form" class="input-box" method="post" enctype="utf8">
+                    <h2 class="create-account">Create account</h2>
+                    <div class="input-field">
+                        <input type="text" th:field="*{firstName}" class="input" id="firstName"  required>
+                        <span th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></span><br/>
+                        <label for="firstName">First Name</label>
+                    </div>
+                    <div class="input-field">
+                        <input type="text" th:field="*{lastName}" class="input" id="lastName"  required>
+                        <span th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></span><br/>
+                        <label for="lastName">Last Name</label>
+                    </div>
+                    <div class="input-field">
+                        <input type="text" th:field="*{userName}" class="input" id="username"  required>
+                        <span th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}"></span><br/>
+                        <label for="username"> Username</label>
+                    </div>
+                    <div class="input-field">
+                        <input type="text" th:field="*{email}" class="input" id="email"  required>
+                        <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span><br/>
+                        <label for="email">Email</label>
+                    </div>
+                    <div class="input-field">
+                        <input type="text" th:field="*{phone}" class="input" id="phone"  required>
+                        <span th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></span><br/>
+                        <label for="phone">Phone Number</label>
+                    </div>
+                    <div class="input-field">
+                        <input type="password" th:field="*{password}" class="input" id="pass"  required>
+                        <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span><br/>
+                        <label for="pass">Password</label>
+                    </div>
+                    <div class="input-field">
+                        <input type="password" th:field="*{matchingPassword}" class="input" id="matchingPassword"  required>
+                        <span th:if="${#fields.hasErrors('matchingPassword')}" th:errors="*{matchingPassword}"></span><br/>
+                        <label for="pass">Password</label>
+                    </div>
+                    <div class="input-field">
+                        <!--                    <input type="submit" class="submit btn btn-primary"  value="Create">-->
+                        <input id="submitButton" class="btn btn-primary" type="submit"
+                               value="Create" name="submitButton"/>
+                    </div>
+                    <div class="signin">
+                        <span>Already have an account?<a th:href="@{/login}">Login</a></span>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
-
 </body>
+<!--<div class="container main">-->
+<!--    <div class="row">-->
+<!--        <div class="col-md-6 top-landing-left">-->
+<!--            <div class="top-landing">-->
+<!--                <div class="top-landing-left">-->
+<!--                    <h1 class="welcome">Welcome to  </h1>-->
+<!--&lt;!&ndash;                    <img src="flyer_logo.png" class="logo" alt="logo">&ndash;&gt;-->
+<!--                    <img th:src="@{/css/flyer-icon.png}" alt="Description of the image" />-->
+<!--                    <h1 class="welcome">flyer</h1>-->
+<!--                    <h5 class="login-description">Here is your personal time management tool to <br> keep track of your time when time flies!</h5>-->
+<!--                </div>-->
+<!--                <div class="top-landing-right">-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="col-md-6 right">-->
+<!--            -->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+<!--</body>-->
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <p>@2024 Key. All Rights Reserved | Design by Alison Nguyen</p>
+            </div>
+        </div>
+    </div>
+</footer>
 </html>
