--- a/src/main/resources/templates/edit-event-form.html
+++ b/src/main/resources/templates/edit-event-form.html
@@ -4,9 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/flyer_logo.png" type="image/x-icon">
     <title>edit event form</title>
-    <!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
-    <!--    <link rel="stylesheet" href="./event_form.css">-->
-    <!--    <link rel="stylesheet" href="./calendar.css">-->
     <link rel="stylesheet" th:href="@{/css/event.css}"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +22,6 @@
     <div class="row">
         <div class="col-md-6">
         </div>
-
         <div class="col-md-6">
             <h1>new event</h1>
             <form th:action="@{'/edit/' + ${event.id}}" method="post" class="input-box" id="new-event-form">
@@ -38,19 +34,44 @@
                     <input type="text" id="location" name="location" placeholder="location" th:value="${event.location}" required>
                 </div>
 
-                <div class="input-field">
-                    <input type="text" id="day" name="day" placeholder="day" required th:value="${event.day}">
-                </div>
+<!--                <div class="input-field">-->
+<!--                    <input type="text" id="day" name="day" placeholder="day" required th:value="${event.day}">-->
+<!--                </div>-->
 
+<!--                <div class="input-field">-->
+<!--                    <div class='input-group date' id='datetimepicker3'>-->
+<!--                        <input type='text' class="form-control" id="startTime" name="start_time"  placeholder="start time" required th:value="${event.start_time}"/>-->
+<!--                        <span class="input-group-addon orange-icon"><i class="fas fa-clock"></i></span>-->
+<!--                    </div>-->
+<!--                </div>-->
+
+<!--                <div class="input-field">-->
+<!--                    <input type="text" id="endTime" name="end_time" placeholder="end time" required th:value="${event.end_time}">-->
+<!--                </div>-->
+                <label style="color: white"> date </label>
                 <div class="input-field">
-                    <div class='input-group date' id='datetimepicker3'>
-                        <input type='text' class="form-control" id="startTime" name="start_time"  placeholder="start time" required th:value="${event.start_time}"/>
-                        <span class="input-group-addon orange-icon"><i class="fas fa-clock"></i></span>
+                    <!--                    <input type="text" id="day" name="day" placeholder="day" required>-->
+                    <div class="input-field">
+                        <div id="datepicker"
+                             class="input-group date"
+                             data-date-format="mm-dd-yyyy">
+                            <input class="form-control"
+                                   type="text" readonly
+                                   name="day"
+                                   th:value="${event.day}"/>
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                        </div>
                     </div>
                 </div>
 
+                <label style="color: white"> start time </label>
                 <div class="input-field">
-                    <input type="text" id="endTime" name="end_time" placeholder="end time" required th:value="${event.end_time}">
+                    <input type="time"  id="datetime" name="start_time" class="form-control" placeholder="start time" th:value="${event.start_time}"/>
+                </div>
+
+                <label style="color: white"> end time </label>
+                <div class="input-field">
+                    <input type="time" class="form-control" name="end_time" placeholder="end time" th:value="${event.end_time}"/>
                 </div>
                 <div class="input-field">
                     <input type="text" id="notes" name="notes" placeholder="notes" required th:value="${event.notes}">
